--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             Are you free on the night of <span>February 14th</span>? 
         </div>
         <div class="button-container">
-            <a href="https://www.facebook.com/joshuatongcua0.rsvp" target="_blank">Yesss! 💌</a>
-            <a href="https://www.facebook.com/Dirktagalog05.rsvp" target="_blank">Let's go! 💕</a>
+            <a href="https:" target="_blank">Yesss! 💌</a>
+            <a href="https:" target="_blank">Let's go! 💕</a>
         </div>
     </div>
 </body>
