--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <h1>Leave V-Day Alone. I Want to Make <br> U + Me Day!</h1>
         <div class="heart">💝</div>
         <div class="small-invitation">
-            Are you free on the night of <span>February 14th</span>? 
+            Are you free on <span>February 14th</span>? 
         </div>
         <div class="button-container">
             <a href="https:" target="_blank">Yesss! 💌</a>
